# fact-mem

./: .gitignore  build_massive_tokens.py  compute_fact_stats.py  convert_massive_tokens.py  fact_search_api.py  index_sharded_tokens.py  prepare_infingram_data.py  project_notes.md  pyproject.toml  pythia.py  query_massive_tokens.py  run_indexing.sh  search_massive_tokens.py  test.ipynb  test_query_massive_tokens.py  test_search_fallback.py  test_token_superset_bpe.py  token_superset_bpe.py  verify_index.py  visualization.py
