[project]
name = "fact-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2026.3.0",
    "infini-gram>=2.6.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "pandas>=3.0.2",
    "pip>=26.0.1",
    "pyarrow>=23.0.1",
    "pybind11>=3.0.3",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
